--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -46,9 +46,9 @@
 
 // Punctuation
 .syntax--keyword.syntax--js {
-  color: @orange;
+  color: @pink;
   &.syntax--operator {
-    color: @pink;
+    color: @pink !important;
     &.syntax--new {
       color: #fff;
     }
