--- a/styles/base.less
+++ b/styles/base.less
@@ -108,12 +108,14 @@ atom-text-editor {
 }
 
 .syntax--keyword {
-  color: #FF66BB;
-
+  color: #FFD14A !important;
+  &.syntax--operator {
+    color: @pink !important;
+  }
   &.syntax--control {
     color: #FF66BB;
     &.syntax--operator.syntax--css{
-      color: #fff;
+      color: #0af !important;
     }
   }
 
@@ -134,7 +136,7 @@ atom-text-editor {
 }
 
 .syntax--storage {
-  color: @purple;
+  color: @cyan;
 }
 
 .syntax--constant {
@@ -158,7 +160,7 @@ atom-text-editor {
 }
 
 .syntax--variable {
-  color: @orange;
+  color: #fff;
 
   &.syntax--interpolation {
     color: darken(@red, 10%);
@@ -297,6 +299,7 @@ atom-text-editor {
 }
 
 .syntax--meta {
+  // color: #0af !important;
   &.syntax--class {
     color: #888;
   }
