--- a/styles/base.less
+++ b/styles/base.less
@@ -136,7 +136,7 @@ atom-text-editor {
 }
 
 .syntax--storage {
-  color: @cyan;
+  color: @cyan !important;
 }
 
 .syntax--constant {
@@ -195,7 +195,7 @@ atom-text-editor {
 
 .syntax--punctuation {
 
-  color: #888;
+  color: white;
   &.syntax--definition {
     &.syntax--entity.syntax--css {
       color: @blue;
@@ -241,7 +241,7 @@ atom-text-editor {
 
 .syntax--support {
   &.syntax--type {
-    color: white;
+    color: @blue;
   }
   &.syntax--class {
     color: @blue;
