--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -10,11 +10,11 @@
   }
 
   .syntax--punctuation {
-    color: #888;
+    color: #fff !important;
   }
 
   .syntax--comment .syntax--punctuation {
-    color: #888;
+    color: #fff;
   }
 
   .syntax--entity.syntax--other.syntax--attribute-name.syntax--id {
