Updated functions to blue

--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -37,7 +37,7 @@
 
 .syntax--support.syntax--js {
   &.syntax--function {
-    color: @cyan;
+    color: @blue;
   }
   &.syntax--variable.syntax--variable.syntax--property {
     color: @cyan;
