--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -1,9 +1,3 @@
-.syntax--entity.syntax--js {
-  &.syntax--name.syntax--function {
-    color: @cyan;
-  }
-}
-
 .syntax--storage.syntax--js {
   &.syntax--type {
     &.syntax--arrow {
@@ -20,6 +14,9 @@
 
 &.syntax--meta {
   color: #fff;
+  &.syntax--arguments {
+    color: @green;
+  }
 }
 
 .syntax--punctuation.syntax--js {
