Fixes framer/company#7171

--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -80,7 +80,7 @@
     }
   .syntax--variable {
     &.syntax--language {
-      color: #000 !important;
+      color: @orange;
     }
   }
   .syntax--constant {
