Fixes framer/company#7172

--- a/styles/base.less
+++ b/styles/base.less
@@ -195,7 +195,7 @@ atom-text-editor {
 
 .syntax--punctuation {
 
-  color: white;
+  color: #888;
   &.syntax--definition {
     &.syntax--entity.syntax--css {
       color: @blue;
@@ -299,7 +299,7 @@ atom-text-editor {
 }
 
 .syntax--meta {
-  // color: #0af !important;
+  color: #fff ;
   &.syntax--class {
     color: #888;
   }
