--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -14,20 +14,23 @@
 
 &.syntax--meta {
   color: #fff;
+  &.syntax--brace {
+    color: #888;
+  }
   &.syntax--arguments {
     color: @green;
   }
 }
 
 .syntax--punctuation.syntax--js {
-  color: #fff;
+  color: #888;
 }
 .syntax--punctuation.syntax--definition.syntax--js {
   &.syntax--parameters {
-    color: #fff;
+    color: #888;
   }
   &.syntax--arguments {
-  color: #fff;
+  color: #888;
   }
 
 }
