Added JSon support

--- a/styles/languages/json.less
+++ b/styles/languages/json.less
@@ -1,5 +1,5 @@
 .syntax--json {
-  // color: #fff;
+  color: #fff;
 
   &.syntax--string {
 
@@ -14,5 +14,5 @@
 }
 
 .syntax--string.syntax--json {
-  color: #fff;
+  color: @green;
 }
