--- a/styles/languages/json.less
+++ b/styles/languages/json.less
@@ -1,18 +1,19 @@
+
+
 .syntax--json {
-  color: #fff;
+  color:#fff;
 
-  &.syntax--string {
-
-    &.syntax--value {
-      color: @purple;
-    }
-    &.syntax--punctuation.syntax--definition.syntax--array{
-      color: #fff;
-    }
-
+  &.syntax--string, .syntax--punctuation.syntax--definition.syntax--array {
+    color:#fff !important;
   }
-}
 
-.syntax--string.syntax--json {
-  color: @green;
+  &.syntax--constant.syntax--numeric {
+    color: @purple;
+  }
+
+  &.syntax--value {
+    .syntax--string.syntax--quoted.syntax--double {
+      color:@purple !important;
+    }
+  }
 }
