--- a/styles/base.less
+++ b/styles/base.less
@@ -294,7 +294,7 @@ atom-text-editor {
     }
 
     &.syntax--id {
-      color: @blue !important;
+      color: @blue;
       &.syntax--css {
         color: @blue !important;
       }
