fixes framer/company#7179 & framer/company#7178

--- a/styles/base.less
+++ b/styles/base.less
@@ -108,7 +108,7 @@ atom-text-editor {
 }
 
 .syntax--keyword {
-  color: #FFD14A !important;
+  color: #FFD14A;
   &.syntax--operator {
     color: @pink !important;
   }
