--- a/styles/base.less
+++ b/styles/base.less
@@ -372,8 +372,9 @@ atom-text-editor {
 
 .syntax--source{
   &.syntax--css.syntax--scss{
-    color: #fff;
+    color: #888;
   }
+
   syntax--gfm .syntax--markup {
     -webkit-font-smoothing: auto;
     &.syntax--heading {
