--- a/styles/languages/css.less
+++ b/styles/languages/css.less
@@ -2,6 +2,9 @@
   color: #fff;
 }
 
+// .syntax--scss.syntax--meta {
+//   color: #888;
+// }
 
 .syntax--scss, .syntax--css, .syntax--less, .syntax--sass {
   .syntax--null {
