--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -10,7 +10,7 @@
   }
 
   .syntax--comment .syntax--punctuation {
-    color: #fff;
+    color: #888;
   }
 
   .syntax--entity.syntax--other.syntax--attribute-name.syntax--id {
