--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -46,7 +46,7 @@
 
 // Punctuation
 .syntax--keyword.syntax--js {
-  color: @pink;
+  color: @orange;
   &.syntax--operator {
     color: @pink !important;
     &.syntax--new {
