--- a/styles/languages/json.less
+++ b/styles/languages/json.less
@@ -1,11 +1,10 @@
 
 
 .syntax--json {
-  color:#fff;
-
-  &.syntax--string, .syntax--punctuation.syntax--definition.syntax--array {
-    color:#fff !important;
+  &.syntax--string {
+    color:#fff;
   }
+
 
   &.syntax--constant.syntax--numeric {
     color: @purple;
