--- a/styles/base.less
+++ b/styles/base.less
@@ -1,98 +1,63 @@
 @import "syntax-variables";
 
 atom-text-editor {
-  background-color: @very-dark-gray;
-  color: #fff;
+  background-color: @syntax-background-color;
+  color: @syntax-text-color;
+}
 
-  .wrap-guide {
-    background-color: #111;
-  }
+atom-text-editor .gutter {
+  background-color: @syntax-gutter-background-color;
+  color: @syntax-gutter-text-color;
+}
 
-  .indent-guide {
-    color: @very-dark-gray;
-  }
+atom-text-editor .gutter .line-number.cursor-line {
+  background-color: @syntax-gutter-background-color-selected;
+  color: @syntax-gutter-text-color-selected;
+}
 
-  .invisible-character {
-    color: #333;
-  }
+atom-text-editor .gutter .line-number.cursor-line-no-selection {
+  color: @syntax-gutter-text-color-selected;
+}
 
-  .gutter {
-    background-color: @very-dark-gray;
-    color: #333;
+atom-text-editor .wrap-guide {
+  color: @syntax-wrap-guide-color;
+}
 
-    .line-number {
-      &.cursor-line {
-        background-color: @very-dark-gray;
-        color: #fff;
-      }
+atom-text-editor .indent-guide {
+  color: @syntax-indent-guide-color;
+}
 
-      &.cursor-line-no-selection {
-        color: #fff ;
-      }
-    }
-  }
+atom-text-editor .invisible-character {
+  color: @syntax-invisible-character-color;
+}
 
-// Search
-  .highlight.current-result {
-    .region {
-      background: #666;
-      border: 1px solid #111;
-      border-radius: 2px;
-    }
-  }
+atom-text-editor .search-results .syntax--marker .region {
+  background-color: transparent;
+  border: @syntax-result-marker-color;
+}
 
-  .highlight.find-result {
-    .region {
-      background-color: #666;
-      border-radius: 2px;
-      border:none;
-    }
-  }
+atom-text-editor .search-results .syntax--marker.current-result .region {
+  border: @syntax-result-marker-color-selected;
+}
 
-  .bracket-matcher {
-    z-index:110;
-    position: absolute !important;
-    .region {
-      color:#fff !important;
-      background: #666;
-      border: none;
-      border-radius: 2px;
-    }
-  }
+atom-text-editor.is-focused .cursor {
+  border-color: @syntax-cursor-color;
+}
 
-  .gutter {
-    background-color: #111;
-    color: #333;
+atom-text-editor.is-focused .selection .region {
+  background-color: @syntax-selection-color;
+}
 
-    .line-number {
-      &.cursor-line {
-        background-color: #111;
-        color: #888 !important;
-      }
+atom-text-editor.is-focused .line-number.cursor-line-no-selection,
+atom-text-editor.is-focused .line.cursor-line {
+  background-color: @syntax-wrap-guide-color;
+}
 
-      &.cursor-line-no-selection {
-        color: #888;
-      }
-    }
-  }
-
-  .gutter .line-number.folded,
-  .gutter .line-number:after,
-  .fold-marker:after {
-    color: #666;
-  }
-
-  .invisible {
-    color: #666;
-  }
-
-  .cursor {
-    color: @blue;
-  }
-
-  .selection .region {
-    background-color: #333;
-  }
+atom-text-editor.editor .bracket-matcher .region {
+  z-index: 100;
+  border-radius: 2px;
+  background-color: fade(@syntax-bracket-matcher, 30%);
+  border: 1px solid fade(@syntax-bracket-matcher, 60%);
 }
 
 
